fix(ui): north arrow no longer overlaps panels
Closes #1814

--- a/src/content/styles/modules/_shell.scss
+++ b/src/content/styles/modules/_shell.scss
@@ -26,7 +26,6 @@
         .rv-north-arrow {
             position: absolute;
             top: rem(0.2);
-            z-index: 10;
             border-radius: rem(2);
             background-color: rgba(white, 0.82);
             padding: rem(0.5);
@@ -35,7 +34,6 @@
         @include include-size(rv-sm) {
             .rv-north-arrow {
                 top: $toolbar-height;
-                z-index: 0;
             }
         }
     }
